Avatar: displayed user avatar

--- a/src/styles/utility.scss
+++ b/src/styles/utility.scss
@@ -39,6 +39,12 @@ $indent_3: 15px;
   width: 200px;
 }
 
+.height-150 {
+  height: 150px;
+}
+.width-150 {
+  width: 150px;
+}
 .height-200 {
   height: 200px;
 }
