--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,13 +4,14 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  //   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  //   sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #fcfcfc;
+  background-color: #1a1d22;
 }
 
 html,
@@ -76,6 +77,7 @@ $chat-b: 65px;
   height: 100%;
   overflow-y: auto;
   list-style-type: none;
+
   li {
     &:last-child {
       margin-bottom: 0 !important;
